Tweaking warning messages to look less like error messages

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,10 @@
 ====================================================================================================
+0.1.7
+====================================================================================================
+
+* Changing warning dialogs to look less like error dialogs
+
+====================================================================================================
 0.1.6
 ====================================================================================================
 
