--- a/doc/changelog
+++ b/doc/changelog
@@ -4,6 +4,11 @@
 
 * Changing API documentation to apigen (apigen.org)
 
+* Adding new "disable_sorting" option to the base_list widget
+  - by default this is set to false
+  - if enabled sortable columns will still appear sortable (ie: still appear as buttons) but when
+    clicked a message will appear to the user indicating that sorting has been disabled
+
 * Various bug fixes
 
 ====================================================================================================
