--- a/doc/changelog
+++ b/doc/changelog
@@ -9,6 +9,9 @@
   - if enabled sortable columns will still appear sortable (ie: still appear as buttons) but when
     clicked a message will appear to the user indicating that sorting has been disabled
 
+* Making status and shortcut items "float"
+  - when scrolling the clock, voip status indicators and buttons will always appear "on top"
+
 * Various bug fixes
 
 ====================================================================================================
