Adding timesec and datetime sec to base view

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,12 @@
 ====================================================================================================
+0.1.7
+====================================================================================================
+
+* Adding timesec and datetimesec types to base_view
+  - timesec is the same as time but seconds can be edited and minutes are not rounded
+  - datetimesec is the same as datetime but seconds can be edited and minutes are not rounded
+
+====================================================================================================
 0.1.6
 ====================================================================================================
 
