Removing defunct 'site or province' option from reports

--- a/doc/changelog
+++ b/doc/changelog
@@ -12,6 +12,8 @@
     current day
   - reports can be force-updated
 
+* Removing defunct "site or province" option from reports
+
 ====================================================================================================
 0.1.6
 ====================================================================================================
