Making use of an LDAP server optional

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,11 @@
 ====================================================================================================
+0.1.8
+====================================================================================================
+
+* Making use of an LDAP server optional
+  - if LDAP is not enabled passwords are stored in the database using whirlpool hash encryption
+
+====================================================================================================
 0.1.7
 ====================================================================================================
 
