--- a/doc/changelog
+++ b/doc/changelog
@@ -5,6 +5,10 @@
 * Making use of an LDAP server optional
   - if LDAP is not enabled passwords are stored in the database using whirlpool hash encryption
 
+* Adding charts as an operation type
+  - charts are included in their own category in the menu
+  - added new "activity" chart which displays server usage measured in processing time
+
 ====================================================================================================
 0.1.7
 ====================================================================================================
