Adding event and event_type to the system
Replacing old "participant_event" and "event" tables, respectively.

--- a/doc/changelog
+++ b/doc/changelog
@@ -11,6 +11,9 @@
 
 * Tables can now be "extended" by applications with additional columns
 
+* Adding events
+  - Any event can now be tracked for every participant
+
 ====================================================================================================
 0.1.9
 ====================================================================================================
