Updating the changelog and fixing the version number

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,13 @@
 ====================================================================================================
+0.2.1
+====================================================================================================
+
+* Adding new Opal Manager class
+  - allows for fetching of values from an Opal service
+
+* Adding service as a report restriction type
+
+====================================================================================================
 0.2.0
 ====================================================================================================
 
