--- a/doc/changelog
+++ b/doc/changelog
@@ -7,6 +7,8 @@
 
 * Adding service as a report restriction type
 
+* Adding new prev_clip action to the slot stack
+
 ====================================================================================================
 0.2.0
 ====================================================================================================
