Adding 'duplicate' as possible participant condition

--- a/doc/changelog
+++ b/doc/changelog
@@ -9,6 +9,8 @@
 
 * Adding new prev_clip action to the slot stack
 
+* Adding "duplicate" to possible participant condition list
+
 ====================================================================================================
 0.2.0
 ====================================================================================================
