Adding participant multiedit feature
Can now edit multiple participants at the same time.  Also adding a new
participant.override_quota column (for Sabretooth and Beartooth)

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,11 @@
 ====================================================================================================
+0.2.2
+====================================================================================================
+
+* Adding new participant multiedit operations
+  - Certain roles may now edit multiple participants in a single operation
+
+====================================================================================================
 0.2.1
 ====================================================================================================
 
