--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,12 @@
 ====================================================================================================
+0.2.3
+====================================================================================================
+
+* Adding new service "release_based" functionality
+  - It is now possible to define a service as not requiring participants to be explicitely released
+    before they are available to that service
+
+====================================================================================================
 0.2.2
 ====================================================================================================
 
