Adding automatic tertiary table-joining to N-to-N joins
When an N-to-N table join includes a reference to a tertiary table with a foreign key in any
of the N-to-N tables it is automatically joined to

--- a/doc/changelog
+++ b/doc/changelog
@@ -12,6 +12,10 @@
   - Participant conditions (states) can now be managed by administrators
   - Each role can be restricted to only setting certain states
 
+* Adding automatic tertiary table-joining to N-to-N joins
+  - When an N-to-N table join includes a reference to a tertiary table with a foreign key in any
+    of the N-to-N tables it is automatically joined to
+
 ====================================================================================================
 0.2.3
 ====================================================================================================
