--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,11 @@
 ====================================================================================================
+0.2.5
+====================================================================================================
+
+* Adding source management
+  - added additional option for source's participants to override quota restrictions
+
+====================================================================================================
 0.2.4
 ====================================================================================================
 
