--- a/doc/changelog
+++ b/doc/changelog
@@ -6,6 +6,8 @@
   - adminstrators can now add/edit/delete which postcode or sites a region is assigned to for a
     particular service
 
+* Adding method to Opal manager to get a variable's labels
+
 ====================================================================================================
 0.2.5
 ====================================================================================================
