Event system now tracks when participants are released to services
All services are now associated with an event_type which is used every
time a participant is released to that service.  For services which are
not release based the event_type still exists, but it the event will
never show for any participant.

--- a/doc/changelog
+++ b/doc/changelog
@@ -8,6 +8,8 @@
 
 * Adding method to Opal manager to get a variable's labels
 
+* Event system now tracks when participants are released to services
+
 ====================================================================================================
 0.2.5
 ====================================================================================================
