Adding check to make sure software and database versions match

--- a/doc/changelog
+++ b/doc/changelog
@@ -1,4 +1,10 @@
 ====================================================================================================
+0.2.7
+====================================================================================================
+
+* Adding a check to make sure software and database versions match
+
+====================================================================================================
 0.2.6
 ====================================================================================================
 
